--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/architects.css">
-</head>
-<body>
+</head class>
+<body class="work-sans-font">
     <header>
+        <nav>
+             <h3 class="brand">G3 Architects</h3>
+
+        </nav>
 
     </header>
     <main>
