--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             </div>
             <div>
                   <img src="images/architect.png" alt="">
-                  <button class="btn-primary">
-                   <span>10+Year</span>
+                  <button id="experience-badge" class="btn-primary">
+                   <span id="experience-year">10+Year</span>
                    <br>
                    <span>Experience</span>
 
@@ -165,8 +165,8 @@
 
         </section>
     </main>
-    <footer>
-
+    <footer class="footer-boss">
+           <p class="footer-end">All rights reserved copyright@2023 startup landing page design</p>
 
     </footer>
 
